--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,8 @@ option,
 select {
 	@apply cursor-pointer;
 }
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+	filter: invert(0.5) sepia(1) saturate(5) hue-rotate(180deg);
+	cursor: pointer;
+}
